src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-dhU-b.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault window height: U\nborder on"
expression: snapshot
---
initial configure:
size: 1240 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 680, bounds: 1240 × 680, states: [Activated]
