src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-dhU-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault window height: U\ntabbed"
expression: snapshot
---
initial configure:
size: 1239 × 688, bounds: 1239 × 688, states: []

post-map configures:
size: 1239 × 688, bounds: 1239 × 688, states: [Activated]
