src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-dwF1000-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault column width: F1000\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1240 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 680, bounds: 1240 × 680, states: []
size: 1240 × 680, bounds: 1240 × 680, states: [Activated]
